--- a/angularapp1/src/app/addstudent/addstudent.component.html
+++ b/angularapp1/src/app/addstudent/addstudent.component.html
@@ -145,7 +145,7 @@
     </table>
     </div>
     <div>
-        <button [disabled]="!addstudentform.valid" (click)="addstudent()" id="addStu" value="Add Student" class="btn btn-success">
+        <button [disabled]="!addstudentform.valid" (click)="addstudent()" routerLink="/student" id="addStu" value="Add Student" class="btn btn-success">
             Add Student</button>
     </div>
     </form>
