--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -41,7 +41,7 @@
 <br>
 <form action="" id="addCourse" style="margin-top: 4em; display: inline;" *ngFor="let cou of courses;  let i=index;">
   <div style="display:inline-block;vertical-align:middle;">  
-    <div style="margin-bottom: 2em; margin-left: 2em;background:rgb(71, 209, 133);border-radius:10px;padding: 2em; width: 35em;">
+    <div style="margin-bottom: 2em; margin-left: 2em;background:#2a8d9a;border-radius:10px;padding: 2em; width: 35em;">
     <label style="padding: 4px;" for="CourseName"><span style="font-size:medium;font-weight:bold;color:#fcf6f5ff;">Course Name : </span><span style="font-size:medium;font-weight:bold;color:crimson;">{{cou.courseName}}</span><hr></label>
     <br>
     <label style="padding: 4px;color:#fcf6f5ff;font-weight:400;" for="courseEnrolled">Number of Students : {{cou.courseEnrolled}}</label>
