--- a/angularapp1/src/app/student/student.component.css
+++ b/angularapp1/src/app/student/student.component.css
@@ -1,73 +1,29 @@
-table {
-  width: 100%;
-  
+*{
+  font-family: 'Roboto', sans-serif;
 }
+
 body{
- background-image: url("https://images.pexels.com/photos/6373289/pexels-photo-6373289.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"); 
-}
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
+  background-image: url("pexels-ti.jpg"); 
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-td, th {
-  border: 1px solid #c7b9b9;
-  text-align: left;
-  padding: 8px;
-  border-color: #66350d;
-  border-style: double;
-  color: rgb(15, 1, 24);
-  font-size: large;
+.flex-container{
+  display: inline;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
 .search-bar{
   font-family: courier;
   font-size: 180%;
   padding: 15px;
   color: whitesmoke;
-}
-
-.container-fluid{
-  color: grey;
-font-family: verdana;
-font-size: 500%;
-text-align: center;
-padding-top: 25px;
-}
-
-.navbar{
-    background: rgb(0, 0, 0); /* Fallback color */
-background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-color: #f1f1f1; /* Grey text */
-width: 100%; /* Full width */
-padding: 0px; /* Some padding */
- font-family: verdana;
-}
-
-.d-flex{
-text-align: right;
-font-size: 16px;
-padding: 14px 40px;
 
 }
-
+#adds:hover{
+  background:white;
+  color:green;
+}
 .button3 {padding: 14px 35px;}
-
-.complete{
-/* background-image:url(background.jpg); */
-background-color: red;
-}
-
-#studentid{
-  background-color: rgba(9, 35, 184, 0.431);
-  color: rgb(12, 43, 70);
-  font-size: large;
-  height:50px;
-
-}
 
 
 
