--- a/angularapp1/src/app/addstudent/addstudent.component.css
+++ b/angularapp1/src/app/addstudent/addstudent.component.css
@@ -54,24 +54,25 @@
   #academyLeft{
     flex-direction: column;
     justify-content: space-around;
-    margin-left: 40px;
+    margin-left: 100px;
     float: left;
     size: 10%;
     height: 10%;
   }
 
   #academyLeft input{
-    width:330px;
+    width:270px;
     height:50px;
   }
   #academyCenter input{
-    width:330px;
+    width:270px;
     height:50px;
   }
   #academyCenter {
     justify-content: center;
     float: right;
     margin-right:52%;
+    margin-left: 0%;
   }
  
   #academyRight{
