--- a/angularapp1/src/app/displaycourse/displaycourse.component.css
+++ b/angularapp1/src/app/displaycourse/displaycourse.component.css
@@ -1,37 +1,12 @@
-.container-fluid{
-    text-align: center;
-    background-color:gray;
-    color: rgb(255, 0, 0);
-    opacity: 0.5;
-    width: 100%;
-    height: 10%;
-    position: absolute;
-    top: 0%;
-    padding-left: 45%;
-    padding-right: 20%;
-    
+*{
+    font-family: 'Roboto', sans-serif;
+}
+.flex-container{
+    display: inline;
 }
 
-.logout{
-    position: absolute;
-    margin-left: 50%;
-}
-.search{
-    text-align: center;
-}
-.submit{
-    background-color: darkmagenta;
-    color: white;
-}
-input[type=text] {
-    background-color: lightgray;
-  }
-  .right-col{
-      margin-left: 30%;
-  }
-  .course-block{
-      background-color: rgb(129, 70, 70);
-      position:absolute;
+.course-block{
+      background-color: #2a8d9a;
       top: 20%;
       left: 3%;
       width: 500px;
@@ -39,27 +14,13 @@ input[type=text] {
       padding-left: 10px;
       padding-top: 10px;
       padding-bottom: 10px;
-      opacity: 0.80;
       color: white;
       font-weight: bold;
       font-size: medium;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-.btn1{
-    margin-left: 75%;
-    border-radius: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-};
-.display{
-    
-    background-image: url('image2.png');
+      display: inline-block;
 }
-.navbar{
-    
-    background-image: url('image2.png');
-    height: 700px; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    text-align: center;
+body{
+    background-image: url("bckimage.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
 }
