--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -1,6 +1,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<nav class="navbar" style="background-color:black; border-bottom: 1em solid white;">
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+</style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- <nav class="navbar" style="background-color:black; border-bottom: 1em solid white;">
   <div class="container-fluid">
     <h1 style="color:aliceblue;">School Admission</h1>
     <h2 style="color:aliceblue;" routerLink="/institute">Academy</h2>
@@ -8,68 +13,81 @@
     <h2 style="color:aliceblue;" routerLink="/enrolledcourse1">Students</h2>
     <h2 style="color:aliceblue; font-weight: bold;" routerLink="/login">Logout</h2>
   </div>
-</nav>
+</nav> -->
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="/homepage">School Admission</a>
+      </div>
+      <div class="nav navbar-nav flex-container">
+        <li class="active"><a routerLink="/enrolledcourse">Add Enrolled course</a></li>
+        <li><a routerLink="/institute">Academy</a></li>
+        <li><a routerLink="/course">Course</a></li>
+        <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+    </div>  
+    </div>
+  </nav>
 <div id="academyBackground">
-  <h1 style="padding-top: 0em; text-align: center; color: black; font-weight: bold;">Add Enrolled Course</h1>
+  <h2 style="padding-top: 0em; text-align: center; color: black; font-weight: 500;">Add Enrolled Course</h2>
   <form #ngForm="ngForm" (ngSubmit)="onSubmit($event)" id="addStudent">
 
   <div id="academyLeft" class="form-group">
     <div id="courseName" class="form-group">
-        <label for="courseName" style="font-weight:bold; font-size: large;">Course Name</label>
+        <label for="courseName" style="font-weight:550; font-size: medium;">Course Name</label>
         <input  type="text" class="form-control" placeholder="Enter your Course name"
         [(ngModel)]="enrolledcourse1.ecourseName" name="ecourseName" id="fatherName">
         
     </div><br><br>
       <div  id="firstName" class="form-group">
-          <label for="firstName" style="font-weight:bold; font-size: large;">First Name</label>
+          <label for="firstName" style="font-weight:500; font-size: medium;">First Name</label>
           <input  type="text" class="form-control input-sm" placeholder="Enter your first name" 
           [(ngModel)]="enrolledcourse1.ecourseFirstName" name="ecourseFirstName" id="firstName" required>
     
          
       </div><br><br>
+      <div id="lastName" class="form-group">
+        <label for="lastName" style="font-weight:500; font-size: medium;">Last Name</label>
+        <input  type="text" class="form-control" placeholder="Enter your last  name"
+        [(ngModel)]="enrolledcourse1.ecourseLastName" name="ecourseLastName" id="lastName">
+        
+    </div><br><br>
       <div id="fatherName" class="form-group">
-          <label for="fatherName" style="font-weight:bold; font-size: large;">Father Name</label>
+          <label for="fatherName" style="font-weight:500; font-size: medium;">Father Name</label>
           <input  type="text" class="form-control" placeholder="Enter your father name"
           [(ngModel)]="enrolledcourse1.ecourseFatherName" name="ecourseFatherName" id="fatherName">
          
       </div><br><br>
       <div  id="motherName" class="form-group"> 
-          <label for="motherName" style="font-weight:bold; font-size: large;">Mother Name</label>
+          <label for="motherName" style="font-weight:500; font-size: medium;">Mother Name</label>
           <input type="text" class="form-control" placeholder="Enter your mother name"
           [(ngModel)]="enrolledcourse1.ecourseMotherName" name="ecourseMotherName" id="motherName">
          
       </div><br><br>
-      <div  id="emailId" class="form-group" >
-          <label for="emailId" style="font-weight:bold; font-size: large;">Email ID</label>
-          <input  type="text" class="form-control" placeholder="Enter your email Id"
-          [(ngModel)]="enrolledcourse1.ecourseEmailId" name="ecourseEmailId" id="emailId">
-         
-      </div><br><br>
-      <div  id="age" class="form-group" style="padding-bottom:6px">
-        <label for="age" style="font-weight:bold; font-size: large;">Age</label>
-        <input  type="text" id="age" class="form-control" placeholder="Enter Your age"
-        [(ngModel)]="enrolledcourse1.ecourseAge" name="ecourseAge">
-     
-    </div><br><br>
       
   </div>
   
   <div id="academyCenter" >
-    <div id="lastName" class="form-group">
-      <label for="lastName" style="font-weight:bold; font-size: large;">Last Name</label>
-      <input  type="text" class="form-control" placeholder="Enter your last  name"
-      [(ngModel)]="enrolledcourse1.ecourseLastName" name="ecourseLastName" id="lastName">
-      
-  </div><br><br>
+    <div  id="age" class="form-group" style="padding-bottom:6px">
+        <label for="age" style="font-weight:500; font-size: medium;">Age</label>
+        <input  type="text" id="age" class="form-control" placeholder="Enter Your age"
+        [(ngModel)]="enrolledcourse1.ecourseAge" name="ecourseAge">
+     
+    </div><br><br>
+    <div  id="emailId" class="form-group" >
+        <label for="emailId" style="font-weight:500; font-size: medium;">Email ID</label>
+        <input  type="text" class="form-control" placeholder="Enter your email Id"
+        [(ngModel)]="enrolledcourse1.ecourseEmailId" name="ecourseEmailId" id="emailId">
+       
+    </div><br><br>
       <div id="phoneNumber" class="form-group">
-          <label for="phoneNumber1" style="font-weight:bold; font-size: large;">Phone Number</label>
+          <label for="phoneNumber1" style="font-weight:500; font-size: medium;">Phone Number</label>
           <input  type="text" class="form-control" placeholder="Enter Your Phone Number"
           [(ngModel)]="enrolledcourse1.ecoursePhoneNumber" name="ecoursePhoneNumber" id="phoneNumber1">
           <!-- <small *ngIf="!enrolledform.get('phoneNumber').valid && enrolledform.get('phoneNumber').touched"
           style="color:red;">* Invalid Phone Number</small> -->
       </div><br><br>
       <div id="maleorfemale" class="form-group">
-          <label for="maleOrFemale" style="font-weight:bold; font-size: large;">Gender</label>
+          <label for="maleOrFemale" style="font-weight:500; font-size: medium;">Gender</label>
           <input  type="text" [(ngModel)]="enrolledcourse1.ecourseMaleorFemale" id="t1" name="ecourseMaleorFemale" id="maleOrFemale" list="l1" class="form-control" placeholder="Enter male or female" required>
          <datalist id="l1">
            <option>Male</option>
@@ -77,7 +95,7 @@
          </datalist>
       </div><br><br>
       <div id="phoneNumber2" class="form-group">
-          <label for="phoneNumber2" style="font-weight:bold; font-size: large;">Alternate Phone Number</label>
+          <label for="phoneNumber2" style="font-weight:500; font-size: medium;">Alternate Phone Number</label>
           <input type="text" class="form-control" placeholder="Enter alternate number"
           [(ngModel)]="enrolledcourse1.ecourseAlternateNumber" name="ecourseAlternateNumber" id="phoneNumber2">
          
@@ -91,38 +109,38 @@
           <tr>
               <td>
       <div style="padding : 1em">
-          <label for="houseNo" style="font-weight:bold; font-size: large;">House No :</label>
+          <label for="houseNo" style="font-weight:500; font-size: medium;">House No :</label>
           <input type="text" id="houseNo" class="form-control"
           [(ngModel)]="enrolledcourse1.ecourseHouseNo" name="ecourseHouseNo">
           
       </div>
       <div style="padding : 1em">
-          <label for="streetName" style="font-weight:bold; font-size: large;">Street Name :</label>
+          <label for="streetName" style="font-weight:500; font-size: medium;">Street Name :</label>
           <input  type="text" id="streetName"  class="form-control"
           [(ngModel)]="enrolledcourse1.ecourseStreetName" name="ecourseStreetName">
          
       </div>
       <div style="padding : 1em">
-          <label for="areaName" style="font-weight:bold; font-size: large;">Area Name :</label>
+          <label for="areaName" style="font-weight:500; font-size: medium;">Area Name :</label>
           <input  type="text" id="areaName"
           [(ngModel)]="enrolledcourse1.ecourseAreaName" name="ecourseAreaName" class="academyLeft form-control">
         
       </div>   
       </td>
       <div style="padding : 1em">       
-          <label for="pincode" style="font-weight:bold; font-size: large;">Pincode :</label>
+          <label for="pincode" style="font-weight:500; font-size: medium;">Pincode :</label>
           <input  type="text" id="pincode"  class="form-control"
           [(ngModel)]="enrolledcourse1.ecoursePincode" name="ecoursePincode">
           
       </div>
       <div style="padding : 1em"> 
-          <label for="state" style="font-weight:bold; font-size: large;" >State :</label>
+          <label for="state" style="font-weight:500; font-size: medium;" >State :</label>
           <input type="text" id="state"  class="form-control"
           [(ngModel)]="enrolledcourse1.ecourseState" name="ecourseState">
          
       </div>
       <div style="padding : 1em">
-          <label for="nationality" style="font-weight:bold; font-size: large;" >Nationality :</label>
+          <label for="nationality" style="font-weight:550; font-size: medium;" >Nationality :</label>
           <input type="text" id="nationality"  class="form-control"
           [(ngModel)]="enrolledcourse1.ecourseNationality" name="ecourseNationality">
         
