--- a/angularapp1/src/app/student/student.component.html
+++ b/angularapp1/src/app/student/student.component.html
@@ -1,38 +1,47 @@
 <head> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script></head>
-<nav class="navbar" style="background-color:rgb(0, 0, 0); border-bottom: 1em solid white;">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-      <h1 style="color:aliceblue; font-size:30px; font-family:initial;">School Admission</h1>
-      <h4 style="color:aliceblue; font-size: 20px; cursor: pointer;" routerLink="/institute"><u> Academy </u></h4>
-      <h4 style="color:aliceblue; font-size: 20px; cursor: pointer;" routerLink="/course"><u> Course</u></h4>
-      <h4 style="color:aliceblue; font-size: 20px; cursor: pointer;" routerLink="/student"><u> Students</u></h4>
-      <h4 style="color:aliceblue; font-size: 20px; cursor: pointer;" routerLink="/login"><b>Logout</b></h4>
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="/homepage">School Admission</a>
+    </div>
+    <div class="nav navbar-nav flex-container">
+      <li class="active"><a routerLink="/addstudent">Student</a></li>
+      <li><a routerLink="/institute">Academy</a></li>
+      <li><a routerLink="/course">Course</a></li>
+      <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+  </div>  
   </div>
 </nav>
-
-<div style="height: 100vh; background-color: white;"> 
+<body>
+<div style="height: 100vh;"> 
   <div class="container">
   <div class="input-group">
       <input type="search" [(ngModel)]="firstName" (ngModelChange)="Search()" class="form-control rounded"  
              placeholder="Type here student id to search"  
              aria-label="Search" aria-describedby="search-addon" 
-             style="margin-top:2em; margin-right: 1em;"  />
-      
+             style="margin-top:1em;margin-bottom:2em;"  />
+      <!-- <button class="btn btn-primary">Add Student</button>        -->
+      <div class="button" style="margin-left: 0.3%;">
+        <p style="display:inline;font-size:medium;font-weight:bold;">For new student : </p>
+        <button id="adds" class="rounded-pill btn btn-success" routerLink="/addstudent"><i class="fa fa-plus"></i> Add Student</button>
+      </div>
     </div>
   </div>  
 <br>
-  
+  <br>
 <div>
         
-        <table>
-          <thead>
+        <table class="table table-striped table-hover" style="width:74%; margin-left:13%;">
+          <thead class="table-dark">
             <tr>
               <th id="studentid">Student ID</th>
               <th id="studentid">Student Name</th>
               <th id="studentid">Email ID</th>
               <th id="studentid">Mobile Number</th>
-              <!-- <th id="studentid">Address</th> -->
               <th id="studentid">Update</th>
               <th id="studentid">Delete</th>
             </tr>
@@ -43,7 +52,6 @@
               <td>{{stud.firstName}} {{stud.lastName}}</td>
               <td>{{stud.email}}</td>
               <td>{{stud.phoneNumber1}}</td>
-              <!-- <td>{{stud.studentId}}</td> -->
               <td>
                 
                 <button type="button" style="padding: 4px; margin: 2px;" class="btn btn-info" (click) = "updateStudent(stud.studentId)">Edit <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
@@ -57,8 +65,8 @@
                 
                 
               </td>
-              <td><button type="button" style="padding: 4px; margin: 2px;" class="btn btn-danger" (click) = "deleteStudent(stud.studentId)">Delete<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
-                fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" style="margin-right:1em;">
+              <td><button type="button" style="padding: 4px; margin: 2px;" class="btn btn-danger" (click) = "deleteStudent(stud.studentId)">Delete <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
+                fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" >
 
 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
 
@@ -70,6 +78,8 @@ d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V
           </tbody>
         </table>
       </div>
+</div>
+</body>
 
   
   
