--- a/angularapp1/src/app/displaycourse/displaycourse.component.html
+++ b/angularapp1/src/app/displaycourse/displaycourse.component.html
@@ -11,8 +11,8 @@
       </div>
       <div class="nav navbar-nav flex-container">
         <li class="active"><a routerLink="/displaycourse">Course</a></li>
-        <li><a routerLink="/institute">Academy</a></li>
-        <li><a routerLink="/addstudent">Add Student</a></li>
+        <li><a routerLink="/viewacademy">Academy</a></li>
+        <!-- <li><a routerLink="/addstudent">Add Student</a></li> -->
         <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </div>  
     </div>
