--- a/angularapp1/src/app/institute/institute.component.html
+++ b/angularapp1/src/app/institute/institute.component.html
@@ -1,11 +1,11 @@
 <body>
   <nav class="navbar" style="background-color:rgb(10, 10, 10); ">
     <div class="container-fluid">
-        <h2  style="color:rgb(255, 255, 255);">School Admission</h2>
-        <h2 style="color:rgb(247, 247, 247);" routerLink="/institute">Academy</h2>
-        <h2 style="color:rgb(253, 253, 253);" routerLink="/course">Course</h2>
-        <h2 style="color:rgb(253, 253, 253);" routerLink="/student">Students</h2>
-        <h2 style="color:rgb(255, 255, 255);" routerLink="/login">Logout</h2>
+        <h2  style="color:rgb(255, 255, 255); cursor: pointer;" routerLink="/homepage">School Admission</h2>
+        <h2 style="color:rgb(247, 247, 247); cursor: pointer;" routerLink="/institute" >Academy</h2>
+        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/course">Course</h2>
+        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/student">Students</h2>
+        <h2 style="color:rgb(255, 255, 255); cursor: pointer;" routerLink="/login">Logout</h2>
     </div>
   </nav>
   
@@ -39,8 +39,8 @@
        
     </div>
     <div class="button">
-      <a (click)="opensweetalert(ins.instituteId)" class="button primary delete">Delete</a>
-      <a (click)="updateInstitute(ins.instituteId)" class="button primary edit" style="margin-left: 1ex;">Edit</a>
+      <a (click)="opensweetalert(ins.instituteId)" style="cursor: pointer;" class="button primary delete">Delete</a>
+      <a (click)="updateInstitute(ins.instituteId)" class="button primary edit" style="margin-left: 1ex; cursor: pointer;">Edit</a>
       
      
     </div>
