--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -16,7 +16,7 @@
     <div class="nav navbar-nav flex-container">
       <li class="active"><a routerLink="/course">Course</a></li>
       <li><a routerLink="/institute">Academy</a></li>
-      <li><a routerLink="/addstudent">Add Student</a></li>
+      <li><a routerLink="/student">Student</a></li>
       <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
   </div>  
   </div>
