changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -21,3 +21,16 @@
   </div>  
   </div>
 </nav>
+<div id="back"> 
+  <div class="container">
+  <div class="input-group mb-3">
+  <input class="form-control" autocomplete="off" id="sbox" placeholder="Which course are you looking for?" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="courseName" (ngModelChange)="Search()"/>
+  <div class="input-group-append">
+    <span class="input-group-text btn" id="basic-addon2" style="margin-top: 2%;"><i class="material-icons">search</i></span>
+  </div>
+  </div>
+  </div>
+  <div class="button" style="margin-left: 2%;">
+    <p style="display:inline;font-size:medium;font-weight:bold;">For new course : </p>
+    <button id="addc" class="rounded-pill btn btn-success" routerLink="/addcourse"><i class="fa fa-plus"></i> Add Course</button>
+  </div>
