changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -34,3 +34,7 @@
     <p style="display:inline;font-size:medium;font-weight:bold;">For new course : </p>
     <button id="addc" class="rounded-pill btn btn-success" routerLink="/addcourse"><i class="fa fa-plus"></i> Add Course</button>
   </div>
+  <hr style="margin-left:2%;width:95%">
+<br>
+<p style="font-family: 'Roboto', sans-serif;margin-left:2%;font-size:medium;font-weight:bold;">Available Courses :</p>
+<br>
