changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -10,3 +10,13 @@ input[type="text"]
 /* .button{
     text-align: end;
 } */
+#sbox{
+    margin-left: 20%;
+    margin-top: 2%;
+    width:50%;
+    display:inline;
+    border-radius: 6px;
+}
+.flex-container{
+    display: inline;
+}
