changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -28,3 +28,9 @@ input[type="text"]
     display: inline;
     size:2px;
 }
+#searchCourse:hover{
+    transition: all 0.3s ease;
+    background:white;
+    color:green;
+    font-weight: 470;
+}
