changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -30,5 +30,17 @@
   </div>
   </div>
   </div>
-    </div>
+  <div class="team-member" id="userInstituteGrid1" *ngFor="let ins of institutes;  let i=index;">
+    <div class="image-wrapper">
+      <img class="img-fluid" src={{ins.imgUrl}} alt="alternative">
+    </div> 
+    <p class="p-large">{{ins.instituteName}}</p>
+    
+    <p class="p-large">{{ins.mobileNumber}}</p>
+    <p class="p-large">{{ins.email}}</p>
+    <p class="job-title">{{ins.instituteAddress}}</p>
+    <button (click)="institueEnroll()" type="button" class="btn btn-success"> View</button>
+  </div>
+  
+  </div>
 
