--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -43,3 +43,59 @@ input[type="text"]
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+.basic-2 {
+	padding-top: 1rem;
+	padding-bottom: 2rem;
+	background-color: rgb(226, 200, 236);
+	text-align: center;
+	
+}
+
+.basic-2 .team-member {
+	display: inline-block;
+	max-width: 20rem;
+	margin-right: 1.5rem;
+	margin-bottom: 3.5rem;
+	margin-left: 1.5rem;
+	box-shadow: 0 0 50px rgba(0, 0, 0, 0.315);
+	background-color: #ffffff;
+	border-radius: 30px;
+}
+
+.basic-2 .image-wrapper {
+	overflow: hidden;
+	margin-bottom: 1.5rem;
+	@include bottom();
+	bottom: 0;
+	
+}
+
+.basic-2 .image-wrapper img {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 160px;
+	margin: 0;
+	transition: all 0.3s;
+	border-radius: 30px;
+}
+
+.basic-2 .image-wrapper:hover img {
+	-moz-transform: scale(1.15);
+	-webkit-transform: scale(1.15);
+	transform: scale(1.15);
+
+} 
+
+
+.basic-2 .team-member .p-large {
+	margin-bottom: 0.25rem;
+
+}
+
+.basic-2 .team-member .job-title {
+	margin-bottom: 0.75rem;
+	color: #484a46;
+	font: 700 1rem/1.375rem "Montserrat", sans-serif;
+	
+}
