--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -46,7 +46,6 @@ input[type="text"]
 .basic-2 {
 	padding-top: 1rem;
 	padding-bottom: 2rem;
-	background-color: rgb(226, 200, 236);
 	text-align: center;
 	
 }
@@ -93,7 +92,20 @@ input[type="text"]
 
 .basic-2 .team-member .job-title {
 	margin-bottom: 0.75rem;
-	color: #484a46;
 	font: 700 1rem/1.375rem "Montserrat", sans-serif;
 	
+}
+span.stars, span.stars span {
+    display: block;
+    background: url('https://apppresser.com/wp-content/uploads/2015/11/stars.png') 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
+}
+
+.alignright {
+  float:right;
 }
