changes done in some frontend

--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -24,7 +24,7 @@
 <div id="back"> 
   <div class="container">
   <div class="input-group mb-3">
-  <input class="form-control" autocomplete="off" id="sbox" placeholder="Which course are you looking for?" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="instituteName" (ngModelChange)="Search()"/>
+  <input class="form-control" autocomplete="off" id="sbox" placeholder="Type here to search academy" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="instituteName" (ngModelChange)="Search()"/>
   <div class="input-group-append">
     <span class="input-group-text btn" id="basic-addon2" style="margin-top: 2%;"><i class="material-icons">search</i></span>
   </div>
