--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -14,9 +14,8 @@
       <a class="navbar-brand" routerLink="/homepage">School Admission</a>
     </div>
     <div class="nav navbar-nav flex-container">
-      <li class="active"><a routerLink="/course">Course</a></li>
-      <li><a routerLink="/institute">Academy</a></li>
-      <li><a routerLink="/student">Student</a></li>
+      <li class="active"><a routerLink="/course">Institute</a></li>
+      <li><a routerLink="/institute">Enrolled Course</a></li>
       <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
   </div>  
   </div>
