--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -16,7 +16,7 @@
     <div class="nav navbar-nav flex-container">
       <li class="active"><a href="/viewacademy">Institute</a></li>
       <li><a href="/institute-enroll">Enrolled Course</a></li>
-      <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li><a  *ngIf="loginService.isUserLoggedIn()" (click)="logout()" href="" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
   </div>  
   </div>
 </nav>
