--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -1,11 +1,13 @@
 *{
     font-family: 'Roboto', sans-serif;
     
+    
 }
 input[type="text"]
 {
     background: transparent;
     border: none;
+    
 }
 /* .button{
     text-align: end;
@@ -42,6 +44,17 @@ input[type="text"]
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-image: url("https://preview.pixlr.com/images/800wm/1151/2/1151114477.jpg");
+    width: 100%;
+    height:100%;
+    position: fixed;
+    justify-content:center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:fixed;
+
+   
+    
 }
 .basic-2 {
 	padding-top: 1rem;
@@ -94,18 +107,4 @@ input[type="text"]
 	margin-bottom: 0.75rem;
 	font: 700 1rem/1.375rem "Montserrat", sans-serif;
 	
-}
-span.stars, span.stars span {
-    display: block;
-    background: url('https://apppresser.com/wp-content/uploads/2015/11/stars.png') 0 -16px repeat-x;
-    width: 80px;
-    height: 16px;
-}
-
-span.stars span {
-    background-position: 0 0;
-}
-
-.alignright {
-  float:right;
 }
