--- a/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
+++ b/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <nav class="navbar" style="background-color:rgb(10, 10, 10); ">
     <div class="container-fluid">
-        <h2  style="color:rgb(255, 255, 255);">School Admission</h2>
-        <h2 style="color:rgb(247, 247, 247);" routerLink="/viewAcademy">Institute</h2>
-        <h2 style="color:rgb(253, 253, 253);" routerLink="/viewCourse">Enrolled Course</h2>
+        <h2  style="color:rgb(255, 255, 255); cursor: pointer;">School Admission</h2>
+        <h2 style="color:rgb(247, 247, 247); cursor: pointer;" routerLink="/viewacademy">Institute</h2>
+        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/displaycourse">Enrolled Course</h2>
+        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/review">review</h2>
 
-        <h2 style="color:rgb(255, 242, 242);" routerLink="/login">Logout</h2>
+        <h2 style="color:rgb(255, 242, 242); cursor: pointer;" routerLink="/login">Logout</h2>
     </div>
   </nav>
 
