--- a/angularapp1/src/app/student/student.component.html
+++ b/angularapp1/src/app/student/student.component.html
@@ -12,6 +12,8 @@
       <li class="active"><a routerLink="/addstudent">Student</a></li>
       <li><a routerLink="/institute">Academy</a></li>
       <li><a routerLink="/course">Course</a></li>
+      <li><a routerLink="/userreview">Reviews</a></li>
+
       <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
   </div>  
   </div>
