--- a/angularapp1/src/app/institute/institute.component.css
+++ b/angularapp1/src/app/institute/institute.component.css
@@ -2,6 +2,8 @@ body{
   background-color: #e1e2e4;
   height: 100%;
   width: 100%;
+  overflow: auto;
+
 }
 .container{
   
@@ -23,8 +25,9 @@ body{
 .college{
     display: flex;
     flex-direction: row;
+    flex-flow: row-reverse wrap;
+
     justify-content: space-evenly;
-  
 }
 .input-group{
     flex-direction: row;
