--- a/angularapp1/src/app/userreview/userreview.component.css
+++ b/angularapp1/src/app/userreview/userreview.component.css
@@ -9,6 +9,7 @@
      background-size: cover;
     background-image:url('https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80    ');
     /* opacity: 10; */
+    overflow: auto;
 }
   #academyBackground{
     background-repeat: no-repeat;
@@ -103,13 +104,13 @@ a{
 
 @media(max-width:1060px){
   .testimonial-box{
-      width:45%;
+      width:40%;
       padding: 10px;
   }
 }
 @media(max-width:790px){
   .testimonial-box{
-      width:100%;
+      width:50%;
   }
   .testimonial-heading h1{
       font-size: 1.4rem;
