--- a/angularapp1/src/app/userreview/userreview.component.html
+++ b/angularapp1/src/app/userreview/userreview.component.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     
-                    <div class="star-icon">
+                    <!-- <div class="star-icon">
                       <input type="radio" name="rating1" id="rating1">
                       <label for="rating1" class="fa fa-star"></label>
                       <input type="radio" name="rating1" id="rating2">
@@ -58,7 +58,7 @@
                       <label for="rating4" class="fa fa-star"></label>
                       <input type="radio" name="rating1" id="rating5">
                       <label for="rating5" class="fa fa-star"></label>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="client-comment">
