--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -52,6 +52,7 @@ input[type="text"]
     background-repeat: no-repeat;
     background-size: cover;
     position:fixed;
+    overflow: auto;
 
    
     
@@ -60,6 +61,8 @@ input[type="text"]
 	padding-top: 1rem;
 	padding-bottom: 2rem;
 	text-align: center;
+    display: flex;
+  flex-flow: wrap;
 	
 }
 
@@ -69,8 +72,9 @@ input[type="text"]
 	margin-right: 1.5rem;
 	margin-bottom: 3.5rem;
 	margin-left: 1.5rem;
-	box-shadow: 0 0 50px rgba(0, 0, 0, 0.315);
+	box-shadow: 0 0 50px rgba(0, 0, 0, 0.404);
 	border-radius: 30px;
+    
 }
 
 .basic-2 .image-wrapper {
@@ -100,7 +104,9 @@ input[type="text"]
 
 .basic-2 .team-member .p-large {
 	margin-bottom: 0.25rem;
-
+    color: rgb(255, 0, 106);
+    background-color: rgba(250, 235, 215, 0.678);
+    font-weight: 400;
 }
 
 .basic-2 .team-member .job-title {
