--- a/angularapp1/src/app/userreview/userreview.component.html
+++ b/angularapp1/src/app/userreview/userreview.component.html
@@ -18,6 +18,7 @@
             <li ><a routerLink="/addstudent">ADDSTUDENT</a></li>
             <li><a routerLink="/institute">ACADEMY</a></li>
             <li><a routerLink="/course">ENROLLED COURSE</a></li>
+            <li><a routerLink="/review">ADD REVIEW</a></li>
             <li ><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> LOGOUT</a></li>
         </div>  
         </div>
