--- a/angularapp1/src/app/adminreview/adminreview.component.css
+++ b/angularapp1/src/app/adminreview/adminreview.component.css
@@ -7,16 +7,19 @@
     /* background-color: rgb(230, 38, 38); */
      background-position: center;
      background-size: cover;
+     overflow: auto;
     background-image:url('https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80    ');
     /* opacity: 10; */
 }
-  #academyBackground{
+  #academyBackground
+  {
     background-repeat: no-repeat;
     background-size: cover;
    
   }
 
-.flex-container{
+.flex-container
+{
   display: inline;
 }
 *{
@@ -25,10 +28,12 @@
   font-family: poppins;
   box-sizing: border-box;
 }
-a{
+a
+{
   text-decoration: none;
 }
-#testimonials{
+#testimonials
+{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,14 +41,16 @@ a{
   width:100%;
 }
 
-.testimonial-box-container{
+.testimonial-box-container
+{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   width:100%;
 }
-.testimonial-box{
+.testimonial-box
+{
   width:500px;
   box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
   background-color: #ffffff;
@@ -52,37 +59,44 @@ a{
   border-radius: 10px;
   text-shadow: #252525;
 }
-.profile-img{
+.profile-img
+{
   width:50px;
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
   margin-right: 10px;
 }
-.profile-img img{
+.profile-img img
+{
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-.profile{
+.profile
+{
   display: flex;
   align-items: center;
 }
-.name-user{
+.name-user
+{
   display: flex;
   flex-direction: column;
 }
-.name-user strong{
+.name-user strong
+{
   color: #3d3d3d;
   font-size: 2rem;
   letter-spacing: 0.5px;
 }
-.name-user span{
+.name-user span
+{
   color: #979797;
   font-size: 1rem;
 }
-.reviews{
+.reviews
+{
   color: black;
 }
 .box-top{
@@ -92,30 +106,36 @@ a{
   margin-bottom: 20px;
   color:aqua
 }
-.client-comment p{
+.client-comment p
+{
   font-size: 2rem;
   color: #4b4b4b;
 }
-.testimonial-box:hover{
+.testimonial-box:hover
+{
   transform: translateY(-10px);
   transition: all ease 0.3s;
 }
 
-@media(max-width:1060px){
+@media(max-width:1060px)
+{
   .testimonial-box{
       width:45%;
       padding: 10px;
   }
 }
-@media(max-width:790px){
+@media(max-width:790px)
+{
   .testimonial-box{
       width:100%;
   }
-  .testimonial-heading h1{
+  .testimonial-heading h1
+  {
       font-size: 1.4rem;
   }
 }
-@media(max-width:340px){
+@media(max-width:340px)
+{
   .box-top{
       flex-wrap: wrap;
       margin-bottom: 10px;
@@ -128,13 +148,16 @@ a{
   color: #ffffff;
   background-color: #252525;
 }
-.star-icon{
+.star-icon
+{
   padding-top:0px;
 }
-.star-icon input{
+.star-icon input
+{
   display: none;
 }
-.star-icon label{
+.star-icon label
+{
   font-size: 30px;
 color:goldenrod;
 padding: 10px;
@@ -142,7 +165,8 @@ float: center;
 transition: all 0.2s ease;
 }
 
-#delete{
+#delete
+{
   /* height: 30px;
   width:30px; */
   border:none;
@@ -151,6 +175,7 @@ transition: all 0.2s ease;
   padding:5px;
   cursor: pointer;
 }
-#delete:hover{
+#delete:hover
+{
   color:red;
 }
