alert box has been completed for all pages

--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -72,7 +72,7 @@
       </div><br><br>
   </div>
   <div id="academyRight">
-      <button [disabled]="!addacademyform.valid" (click)="addAcademy()" class="btn btn-success" id="addAcademy">Add Academy</button>
+      <button [disabled]="!addacademyform.valid" (click)="addAcademy()" class="btn btn-success" id="addAcademy" routerLink="/institute">Add Academy</button>
   </div>
 </form>
 
