--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -149,7 +149,7 @@
   </table>
   </div>
   <div>
-      <button  (click)="addenrolledcourse()" id="enrolNowButton" value="Add Enrolled Course" class="btn btn-success">
+      <button  (click)="addenrolledcourse()" id="enrolNowButton" value="Add Enrolled Course" class="btn btn-success" routerLink="/viewacademy">
           Add Enrolled Course</button>
   </div>
   </form>
